--- a/_config.yml
+++ b/_config.yml
@@ -43,5 +43,5 @@ github_username: djekmani
 twitter_username: dgeeky
 
 google_analytics: 
-disqus_shortname: azzedinedgeeky
+disqus_shortname: djekmani
 
